# mail-send

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: mailchimp.rs  mailgun.rs  smtp_auth.rs  smtp_dkim.rs  smtp_raw_message.rs  smtp_relay.rs  smtp_tls_relay.rs
src/: lib.rs
src/dkim/: canonicalize.rs  main.rs  mod.rs  signature.rs
src/http/: mailchimp.rs  mailgun.rs  mod.rs
src/smtp/: auth.rs  builder.rs  capability.rs  client.rs  dkim.rs  ehlo.rs  envelope.rs  message.rs  mod.rs  reply.rs  stream.rs  tls.rs
src/transport/: client.rs  mod.rs  stream.rs  tls.rs
