[package]
name = "mail-send"
description = "E-mail delivery library with SMTP and DKIM support"
version = "0.3.1"
edition = "2021"
authors = [ "Stalwart Labs <hello@stalw.art>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stalwartlabs/mail-send"
homepage = "https://github.com/stalwartlabs/mail-send"
keywords = ["smtp", "dkim", "email", "mime", "mail"]
categories = ["email"]
readme = "README.md"

[lib]
doctest = false

[dependencies]
smtp-proto = { version = "0.1", git = "https://github.com/stalwartlabs/smtp-proto" }
mail-auth = { version = "0.3", git = "https://github.com/stalwartlabs/mail-auth", optional = true }
mail-builder = { version = "0.2", git = "https://github.com/stalwartlabs/mail-builder", optional = true }
base64 = "0.20.0"
rand = { version = "0.8.5", optional = true }
md5 = { version = "0.7.0", optional = true }
tokio = { version = "1.23", features = ["net", "io-util", "time"]}
rustls = { version = "0.20", features = ["dangerous_configuration"]}
tokio-rustls = { version = "0.23"}
webpki-roots = { version = "0.22"}
gethostname = { version = "0.4"}

[dev-dependencies]
tokio = { version = "1.16", features = ["net", "io-util", "time", "rt-multi-thread", "macros"] }

[features]
default = ["digest-md5", "cram-md5", "builder", "dkim"]
skip-ehlo = []
builder = ["mail-builder"]
dkim = ["mail-auth"]
digest-md5 = ["md5", "rand"]
cram-md5 = ["md5"]
